<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_general"
    tools:context="im.maya.forcavendaseudora.Login">


    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="115dp"
            android:layout_height="110dp"
            android:background="@drawable/logo_login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:padding="3dp"
            android:orientation="vertical"
            android:background="@drawable/login_edit">

            <EditText
                android:id="@+id/login_edit_login"
                android:hint="@string/login_hint_code"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:inputType="textShortMessage"
                android:background="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="#c2c2c2"/>

            <EditText
                android:id="@+id/login_edit_password"
                android:hint="@string/login_hint_password"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:background="@android:color/white"/>

        </LinearLayout>

        <Button
            android:id="@+id/login_button_enter"
            android:text="@string/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            style="@style/ButtonLogin"
            android:background="@drawable/login_button"/>

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    </LinearLayout>


</RelativeLayout>
